--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#contact" class="btn">Contact Us</a>
         </div>
         <div class="image-container">
-            <img src="business-deal.png" alt="Team Collaboration discussing strategies">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/business-deal.png?v=1742410743871" alt="Team Collaboration discussing strategies">
         </div>
     </div>
 
@@ -37,10 +37,10 @@
     <section class="companies">
         <p>Trusted by 4,000+ Companies</p>
         <div class="company-logos">
-            <img src="company1.png" alt="Spotify logo">
-            <img src="company2.png" alt="Slack logo">
-            <img src="company3.png" alt="Dropbox logo">
-            <img src="company4.png" alt="Zoom logo">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/Company%20logo.png?v=1742405369575" alt="Spotify logo">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/Company%20logo-1.png?v=1742405372194" alt="Slack logo">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/Company%20logo-2.png?v=1742405375990" alt="Dropbox logo">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/Company%20logo-3.png?v=1742405378128" alt="Zoom logo">
         </div>
     </section>
 
@@ -49,17 +49,17 @@
         <h2>Branding & Design System</h2>
         <div class="branding-cards">
             <div class="card">
-                <img src="design.png" alt="Website Design icon">
+                <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/website-4943%201.png?v=1742405396971" alt="Website Design icon">
                 <h3>Website Design</h3>
                 <p>Creating stunning, user-friendly websites tailored to your business needs.</p>
             </div>
             <div class="card">
-                <img src="dev.png" alt="Web Development icon">
+                <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/computer-6823%201.png?v=1742405380651" alt="Web Development icon">
                 <h3>Web Development</h3>
                 <p>Developing fast, secure, and scalable websites for all industries.</p>
             </div>
             <div class="card">
-                <img src="mobile.png" alt="Mobile App Development icon">
+                <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/mobile-phone-1164%201.png?v=1742405634042" alt="Mobile App Development icon">
                 <h3>Mobile App Development</h3>
                 <p>Building innovative and intuitive mobile applications for iOS and Android.</p>
             </div>
@@ -69,7 +69,7 @@
     <!-- Sección Custom & Plugin Development -->
     <div class="container">
         <div class="image-container">
-            <img src="plugin-development.png" alt="Custom Plugin Development Process">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/businessman-analyzing-data-1.png?v=1742410746494" alt="Custom Plugin Development Process">
         </div>
         <div class="text-content">
             <h1>Custom & Plugin Development</h1>
@@ -80,7 +80,7 @@
     <!-- Sección Be a Part of the Next Big Thing -->
     <div class="container reverse">
         <div class="image-container">
-            <img src="next-big-thing.png" alt="Next Big Thing Collaboration">
+            <img src="https://cdn.glitch.global/def85f23-bdf0-4cee-b27e-22cafbfa3cde/customer-support.png?v=1742410757881" alt="Next Big Thing Collaboration">
         </div>
         <div class="text-content">
             <h1>Be a part of the next big thing</h1>
